[gd_scene load_steps=4 format=3 uid="uid://2es8iplhbb1"]

[ext_resource type="FontFile" uid="uid://mb1jol24xvf8" path="res://assets/fonts/connection_ii/ConnectionII.otf" id="1_smygs"]
[ext_resource type="Script" path="res://scenes/towers/statue_menu.gd" id="2_wpkq1"]

[sub_resource type="Theme" id="Theme_8mu52"]
default_font = ExtResource("1_smygs")
default_font_size = 20

[node name="StatueMenu" type="PopupPanel"]
transparent_bg = true
initial_position = 2
size = Vector2i(190, 113)
visible = true
theme = SubResource("Theme_8mu52")
script = ExtResource("2_wpkq1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 186.0
offset_bottom = 109.0
grow_horizontal = 2

[node name="MenuTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Statue Menu"
horizontal_alignment = 1
justification_flags = 162

[node name="HealthContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "Health:"
horizontal_alignment = 1
justification_flags = 162

[node name="HealthStatus" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "0"

[node name="HealthDivider" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "/"

[node name="HealthMax" type="Label" parent="VBoxContainer/HealthContainer"]
layout_mode = 2
text = "0"

[node name="LevelContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/LevelContainer"]
layout_mode = 2
text = "Level:"

[node name="LevelStatus" type="Label" parent="VBoxContainer/LevelContainer"]
layout_mode = 2
text = "1"

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HealButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Heal +5"

[node name="UpgradeButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Upgrade"

[node name="MenuRefresh" type="Timer" parent="."]
wait_time = 0.2

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/HealButton" to="." method="_on_heal_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="timeout" from="MenuRefresh" to="." method="_on_menu_refresh_timeout"]
